added apt cookbook as git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "cookbooks/openssl"]
 	path = cookbooks/openssl
 	url = git://github.com/cookbooks/openssl.git
+[submodule "cookbooks/apt"]
+	path = cookbooks/apt
+	url = git://github.com/cookbooks/apt.git
