--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "cookbooks/build-essential"]
 	path = cookbooks/build-essential
 	url = git://github.com/cookbooks/build-essential.git
+[submodule "cookbooks/imagemagick"]
+	path = cookbooks/imagemagick
+	url = git://github.com/cookbooks/imagemagick.git
